[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/Maps/Spawners/GenericSpawner.gd" type="Script" id=1]
[ext_resource path="res://scenes/Entities/DeathViz.tscn" type="PackedScene" id=2]

[node name="GenericSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]

[node name="Appearance" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Appearance"]

[node name="DeathViz" parent="." instance=ExtResource( 2 )]

[node name="SpawnSupply" type="ResourcePreloader" parent="."]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]

[editable path="DeathViz"]
